--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
                                                 <div class="swiper-slide-inner-txt">
                                                     <!-- intro subtitle start -->
                                                     <div class="intro-subtitle">
-                                                        Tout le monde a besoin d'un bon
+                                                        Tout le monde a besoin d'une bonne
                                                     </div>
                                                     <!-- intro subtitle end -->
                                                     <!-- intro title start -->
                                                     <div class="intro-title">
-                                                        Photographe
+                                                        Image
                                                     </div>
                                                     <!-- intro title end -->
                                                 </div>
@@ -147,12 +147,12 @@
                                                 <div class="swiper-slide-inner-txt">
                                                     <!-- intro subtitle start -->
                                                     <div class="intro-subtitle">
-                                                        Tout le monde a besoin d'un bon
+                                                        Tout le monde a besoin d'une bonne
                                                     </div>
                                                     <!-- intro subtitle end -->
                                                     <!-- intro title start -->
                                                     <div class="intro-title">
-                                                        Photographe
+                                                        Image
                                                     </div>
                                                     <!-- intro title end -->
                                                 </div>
@@ -173,12 +173,12 @@
                                                 <div class="swiper-slide-inner-txt">
                                                     <!-- intro subtitle start -->
                                                     <div class="intro-subtitle">
-                                                        Tout le monde a besoin d'un bon
+                                                        Tout le monde a besoin d'une bonne
                                                     </div>
                                                     <!-- intro subtitle end -->
                                                     <!-- intro title start -->
                                                     <div class="intro-title">
-                                                        Photographe
+                                                        Image
                                                     </div>
                                                     <!-- intro title end -->
                                                 </div>
@@ -199,12 +199,12 @@
                                                 <div class="swiper-slide-inner-txt">
                                                     <!-- intro subtitle start -->
                                                     <div class="intro-subtitle">
-                                                        Tout le monde a besoin d'un bon
+                                                        Tout le monde a besoin d'une bonne
                                                     </div>
                                                     <!-- intro subtitle end -->
                                                     <!-- intro title start -->
                                                     <div class="intro-title">
-                                                        Photographe
+                                                        Image
                                                     </div>
                                                     <!-- intro title end -->
                                                 </div>
