--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
                                                 <div class="swiper-slide-inner-txt">
                                                     <!-- intro subtitle start -->
                                                     <div class="intro-subtitle">
-                                                        Tout le monde a besoin d'une bonne
+                                                        Tout le monde a besoin de la
                                                     </div>
                                                     <!-- intro subtitle end -->
                                                     <!-- intro title start -->
                                                     <div class="intro-title">
-                                                        Image
+                                                        Qualité
                                                     </div>
                                                     <!-- intro title end -->
                                                 </div>
@@ -173,12 +173,12 @@
                                                 <div class="swiper-slide-inner-txt">
                                                     <!-- intro subtitle start -->
                                                     <div class="intro-subtitle">
-                                                        Tout le monde a besoin d'une bonne
+                                                        Tout le monde a besoin d'avoir un
                                                     </div>
                                                     <!-- intro subtitle end -->
                                                     <!-- intro title start -->
                                                     <div class="intro-title">
-                                                        Image
+                                                        Art
                                                     </div>
                                                     <!-- intro title end -->
                                                 </div>
@@ -199,12 +199,12 @@
                                                 <div class="swiper-slide-inner-txt">
                                                     <!-- intro subtitle start -->
                                                     <div class="intro-subtitle">
-                                                        Tout le monde a besoin d'une bonne
+                                                        Tout le monde a besoin d'etre
                                                     </div>
                                                     <!-- intro subtitle end -->
                                                     <!-- intro title start -->
                                                     <div class="intro-title">
-                                                        Image
+                                                        Vue
                                                     </div>
                                                     <!-- intro title end -->
                                                 </div>
