--- a/index.html
+++ b/index.html
@@ -829,20 +829,21 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Simplicity<br>
-                                                is complex
+                                                Simplicite<br>
+                                                et Passion
                                             </h4>
                                         </div>
                                         <div class="works-page-img-carousel-heading">
-                                            Beauty / Fashion
+                                            Couleur / Art
                                         </div>
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
                                             <a
                                                 class="c-btn c-btn-works inverse"
                                                 data-lity=""
-                                                href="https://vimeo.com/119744580">
-                                                <span>Watch video</span></a>
+                                                href="img/works/works-large/works-page-img-carousel-item-large-9.jpg"
+                                                title="Simplicite et Passion">
+                                                <span>Voir l'image</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -855,20 +856,21 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Design<br>
-                                                is a process
+                                                Ambiance<br>
+                                                et Réalisme
                                             </h4>
                                         </div>
                                         <div class="works-page-img-carousel-heading">
-                                            People / Life
+                                            Couleur / Art
                                         </div>
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
                                             <a
                                                 class="c-btn c-btn-works inverse"
                                                 data-lity=""
-                                                href="#">
-                                                <span>Watch video</span></a>
+                                                href="img/works/works-large/works-page-img-carousel-item-large-10.jpg"
+                                                title="Ambiance et Réalisme">
+                                                <span>Voir l'image</span></a>
                                         </div>
                                     </div>
                                 </div>
