--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
                                             <a
-                                                class="c-btn c-btn-works inverse"
+                                                class="c-btn c-btn-works inverse popup-photo"
                                                 data-lity=""
                                                 href="img/works/works-large/works-page-img-carousel-item-large-9.jpg"
                                                 title="Simplicite et Passion">
@@ -866,8 +866,7 @@
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
                                             <a
-                                                class="c-btn c-btn-works inverse"
-                                                data-lity=""
+                                                class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-10.jpg"
                                                 title="Ambiance et Réalisme">
                                                 <span>Voir l'image</span></a>
