--- a/index.html
+++ b/index.html
@@ -883,19 +883,19 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Aesthetic<br>
-                                                is a decision
+                                                Charisme<br>
+                                                et decision
                                             </h4>
                                         </div>
                                         <div class="works-page-img-carousel-heading">
-                                            Royalty / Stock
+                                            Art / Culture
                                         </div>
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
                                             <a
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-11.jpg"
-                                                title="Aesthetic is a decision">
+                                                title="Charisme et decision">
                                                 <span>Voir l'image</span></a>
                                         </div>
                                     </div>
@@ -909,19 +909,19 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Style<br>
-                                                is everything
+                                                L'art culinaire<br>
+                                                en couleur
                                             </h4>
                                         </div>
                                         <div class="works-page-img-carousel-heading">
-                                            Culture / Travel
+                                            Couleur / Bar
                                         </div>
                                         <div class="works-page-img-carousel-content">
                                             <div class="works-page-img-carousel-spacer-top"></div>
                                             <a
                                                 class="c-btn c-btn-works inverse popup-photo"
                                                 href="img/works/works-large/works-page-img-carousel-item-large-12.jpg"
-                                                title="Style is everything">
+                                                title="L'art culinaire en couleur">
                                                 <span>Voir l'image</span></a>
                                         </div>
                                     </div>
@@ -939,7 +939,7 @@
             <div class="section" id="section4">
                 <!-- section title start -->
                 <div class="section-title-vertical right-side">
-                    <span>News</span>
+                    <span>Nouvelles</span>
                 </div>
                 <!-- section title end -->
                 <!-- news IMG carousel start -->
