--- a/index.html
+++ b/index.html
@@ -1283,7 +1283,7 @@
                                         <!-- contact form launcher start -->
                                         <div class="contact-modal-launcher-wrapper">
                                             <a class="button-link contact-modal-launcher">
-                                                <span>Utiliser la forme</span>
+                                                <span>Utiliser le formulaire</span>
                                                 <i class="ion-android-arrow-dropright"></i>
                                             </a>
                                         </div>
@@ -1375,7 +1375,7 @@
                                                         class="requiredField name"
                                                         id="name"
                                                         name="name"
-                                                        placeholder="Name"
+                                                        placeholder="Noms"
                                                         type="text">
                                                 </div>
                                                 <!-- col end -->
@@ -1395,7 +1395,7 @@
                                                         class="requiredField subject"
                                                         id="subject"
                                                         name="subject"
-                                                        placeholder="Subject"
+                                                        placeholder="Sujet"
                                                         type="text">
                                                 </div>
                                                 <!-- col end -->
