--- a/index.html
+++ b/index.html
@@ -1283,7 +1283,7 @@
                                         <!-- contact form launcher start -->
                                         <div class="contact-modal-launcher-wrapper">
                                             <a class="button-link contact-modal-launcher">
-                                                <span>Utiliser le formulaire</span>
+                                                <span>le formulaire</span>
                                                 <i class="ion-android-arrow-dropright"></i>
                                             </a>
                                         </div>
