--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
                                         </p>
                                         <div class="news-page-img-carousel-spacer-bottom">
                                             <a class="c-btn c-btn-news inverse" data-id="news-more-1">
-                                                <span>Read more</span></a>
+                                                <span></span></a>
                                         </div>
                                     </div>
                                 </div>
