--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
                                         </p>
                                         <div class="news-page-img-carousel-spacer-bottom">
                                             <a class="c-btn c-btn-news inverse" data-id="news-more-1">
-                                                <span></span></a>
+                                                <span>Lire la suite</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -996,7 +996,7 @@
                                         </p>
                                         <div class="news-page-img-carousel-spacer-bottom">
                                             <a class="c-btn c-btn-news inverse" data-id="news-more-2">
-                                                <span>Read more</span></a>
+                                                <span>Lire la suite</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -1025,7 +1025,7 @@
                                         </p>
                                         <div class="news-page-img-carousel-spacer-bottom">
                                             <a class="c-btn c-btn-news inverse" data-id="news-more-3">
-                                                <span>Read more</span></a>
+                                                <span>Lire la suite</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -1055,7 +1055,7 @@
                                         </p>
                                         <div class="news-page-img-carousel-spacer-bottom">
                                             <a class="c-btn c-btn-news inverse" data-id="news-more-4">
-                                                <span>Read more</span></a>
+                                                <span>Lire la suite</span></a>
                                         </div>
                                     </div>
                                 </div>
