--- a/index.html
+++ b/index.html
@@ -952,19 +952,18 @@
                                 <div class="news-page-img-carousel-text">
                                     <div class="news-page-img-carousel-title">
                                         <h4>
-                                            Simplicity<br>
-                                            is complex
+                                            Portraits intemporels<br>
+        et émotions saisies
                                         </h4>
                                     </div>
                                     <div class="news-page-img-carousel-heading">
-                                        Beauty / Fashion
+                                        Portrait / Lifestyle
                                     </div>
                                     <div class="news-page-img-carousel-content">
                                         <div class="news-page-img-carousel-spacer-top"></div>
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec
-                                            scelerisque nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                                        </p>
+                                            Explorez une série de portraits intemporels et d'émotions saisies. Plongez dans l'univers des personnes capturées à travers l'objectif et laissez-vous toucher par ces moments uniques.
+    </p>
                                         <div class="news-page-img-carousel-spacer-bottom">
                                             <a class="c-btn c-btn-news inverse" data-id="news-more-1">
                                                 <span>Lire la suite</span></a>
@@ -981,19 +980,18 @@
                                 <div class="news-page-img-carousel-text">
                                     <div class="news-page-img-carousel-title">
                                         <h4>
-                                            Design<br>
-                                            is a process
+                                            Voyages en images<br>
+                                            et souvenirs éternels
                                         </h4>
                                     </div>
                                     <div class="news-page-img-carousel-heading">
-                                        People / Life
+                                        Mariage / Event
                                     </div>
                                     <div class="news-page-img-carousel-content">
                                         <div class="news-page-img-carousel-spacer-top"></div>
                                         <p>
-                                            Morbi hendrerit orci aliquet augue eleifend, ac gravida turpis rutrum.
-                                            Suspendisse suscipit dui eu lorem pharetra egestas. Nunc nec eleifend libero.
-                                        </p>
+                                            Partez en voyage à travers des images captivantes et créez des souvenirs éternels. Explorez des destinations exotiques, des paysages époustouflants et des cultures fascinantes à travers ces photographies uniques.
+    </p>
                                         <div class="news-page-img-carousel-spacer-bottom">
                                             <a class="c-btn c-btn-news inverse" data-id="news-more-2">
                                                 <span>Lire la suite</span></a>
