--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
         <title>
             EliliKitoko - Photographie Portfolio
         </title>
-        <meta content="Découvrez le portfolio de photographie d'EliliKitoko, mettant en valeur son talent et sa passion pour la photographie. Explorez ses différentes séries de photos captivantes et laissez-vous inspirer par son travail artistique." name="description">
+        <meta
+            content="Découvrez le portfolio de photographie d'EliliKitoko, mettant en valeur son talent et sa passion pour la photographie. Explorez ses différentes séries de photos captivantes et laissez-vous inspirer par son travail artistique."
+            name="description">
         <meta content="Caleb Kiangebeni" name="author">
-        <meta content="photographie, portfolio, photographe, artiste, images, galerie, séries, talent, passion, inspiration, kinshasa" name="keywords">
+        <meta
+            content="photographie, portfolio, photographe, artiste, images, galerie, séries, talent, passion, inspiration, kinshasa"
+            name="keywords">
         <meta
             content="width=device-width, initial-scale=1, maximum-scale=1"
             name="viewport">
@@ -741,7 +745,8 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Horizons <br>
+                                                Horizons
+                                                <br>
                                                 Infinis
                                             </h4>
                                         </div>
@@ -771,7 +776,8 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Portraits <br>
+                                                Portraits
+                                                <br>
                                                 et Émotions
                                             </h4>
                                         </div>
@@ -797,7 +803,8 @@
                                     <div class="works-page-img-carousel-text">
                                         <div class="works-page-img-carousel-title">
                                             <h4>
-                                                Abstrait <br>
+                                                Abstrait
+                                                <br>
                                                 et Surréalisme
                                             </h4>
                                         </div>
@@ -953,7 +960,7 @@
                                     <div class="news-page-img-carousel-title">
                                         <h4>
                                             Portraits intemporels<br>
-        et émotions saisies
+                                            et émotions saisies
                                         </h4>
                                     </div>
                                     <div class="news-page-img-carousel-heading">
@@ -962,8 +969,10 @@
                                     <div class="news-page-img-carousel-content">
                                         <div class="news-page-img-carousel-spacer-top"></div>
                                         <p>
-                                            Explorez une série de portraits intemporels et d'émotions saisies. Plongez dans l'univers des personnes capturées à travers l'objectif et laissez-vous toucher par ces moments uniques.
-    </p>
+                                            Portraits intemporels et d'émotions saisies. Plongez dans l'univers des
+                                            personnes capturées à travers l'objectif et laissez-vous toucher par ces moments
+                                            uniques.
+                                        </p>
                                         <div class="news-page-img-carousel-spacer-bottom">
                                             <a class="c-btn c-btn-news inverse" data-id="news-more-1">
                                                 <span>Lire la suite</span></a>
@@ -990,8 +999,10 @@
                                     <div class="news-page-img-carousel-content">
                                         <div class="news-page-img-carousel-spacer-top"></div>
                                         <p>
-                                            Partez en voyage à travers des images captivantes et créez des souvenirs éternels. Explorez des destinations exotiques, des paysages époustouflants et des cultures fascinantes à travers ces photographies uniques.
-    </p>
+                                            Partez en voyage à travers des images captivantes et créez des souvenirs
+                                            éternels. Explorez des destinations exotiques, des paysages époustouflants et
+                                            des cultures fascinantes à travers ces photographies uniques.
+                                        </p>
                                         <div class="news-page-img-carousel-spacer-bottom">
                                             <a class="c-btn c-btn-news inverse" data-id="news-more-2">
                                                 <span>Lire la suite</span></a>
@@ -1008,18 +1019,19 @@
                                 <div class="news-page-img-carousel-text">
                                     <div class="news-page-img-carousel-title">
                                         <h4>
-                                            Aesthetic<br>
-                                            is a decision
+                                            Instants urbains<br>
+                                            et atmosphères citadines
                                         </h4>
                                     </div>
                                     <div class="news-page-img-carousel-heading">
-                                        Royalty / Stock
+                                        Street / Urbain
                                     </div>
                                     <div class="news-page-img-carousel-content">
                                         <div class="news-page-img-carousel-spacer-top"></div>
                                         <p>
-                                            Suspendisse sit amet imperdiet sem. Vivamus sit amet lorem interdum, aliquet
-                                            metus quis, fermentum velit. Phasellus ullamcorper, ante ac semper congue.
+                                            Univers des instants urbains et des atmosphères citadines capturés à travers
+                                            l'objectif. Découvrez la beauté cachée des rues et laissez-vous emporter par ces
+                                            images qui racontent des histoires.
                                         </p>
                                         <div class="news-page-img-carousel-spacer-bottom">
                                             <a class="c-btn c-btn-news inverse" data-id="news-more-3">
@@ -1037,19 +1049,19 @@
                                 <div class="news-page-img-carousel-text">
                                     <div class="news-page-img-carousel-title">
                                         <h4>
-                                            Style<br>
-                                            is everything
+                                            Paysages captivants<br>
+                                            et moments figés
                                         </h4>
                                     </div>
                                     <div class="news-page-img-carousel-heading">
-                                        Culture / Travel
+                                        Culture / Paysages
                                     </div>
                                     <div class="news-page-img-carousel-content">
                                         <div class="news-page-img-carousel-spacer-top"></div>
                                         <p>
-                                            In nibh nisi, blandit eget accumsan et, lobortis ac tellus. Vestibulum feugiat
-                                            tellus a turpis consectetur pretium. Donec et ante odio. Vestibulum eu accumsan
-                                            nisl.
+                                            Découvrez une collection de paysages captivants et de moments figés dans le
+                                            temps. Plongez dans la beauté de la nature et laissez-vous transporter par ces
+                                            images uniques.
                                         </p>
                                         <div class="news-page-img-carousel-spacer-bottom">
                                             <a class="c-btn c-btn-news inverse" data-id="news-more-4">
