--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
                                             </div>
                                             <div class="text-spacer">
                                                 <a class="c-btn inverse-dark" href="javascript:void(0)">
-                                                    <span>Close</span></a>
+                                                    <span>Fermer</span></a>
                                             </div>
                                         </div>
                                         <!-- main txt end -->
@@ -1153,7 +1153,7 @@
                                             </div>
                                             <div class="text-spacer">
                                                 <a class="c-btn inverse-dark" href="javascript:void(0)">
-                                                    <span>Close</span></a>
+                                                    <span>Fermer</span></a>
                                             </div>
                                         </div>
                                         <!-- main txt end -->
@@ -1199,7 +1199,7 @@
                                             </div>
                                             <div class="text-spacer">
                                                 <a class="c-btn inverse-dark" href="javascript:void(0)">
-                                                    <span>Close</span></a>
+                                                    <span>Fermer</span></a>
                                             </div>
                                         </div>
                                         <!-- main txt end -->
