--- a/index.html
+++ b/index.html
@@ -1091,8 +1091,8 @@
                                         <div class="height-correction">
                                             <div class="text-title text-title-dark">
                                                 <h4>
-                                                    Simplicity<br>
-                                                    is complex
+                                                    Portraits intemporels<br>
+                                            et émotions saisies
                                                 </h4>
                                             </div>
                                             <div class="news-page-img-carousel-heading news-page-img-carousel-heading-dark">
