--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@
                                                 </h4>
                                             </div>
                                             <div class="news-page-img-carousel-heading news-page-img-carousel-heading-dark">
-                                                Beauty / Fashion
+                                                Portrait / Lifestyle
                                                 <span>Wednesday, June 20, 2018</span>
                                             </div>
                                             <div class="news-text-txt">
