--- a/index.html
+++ b/index.html
@@ -1096,13 +1096,12 @@
                                                 </h4>
                                             </div>
                                             <div class="news-page-img-carousel-heading news-page-img-carousel-heading-dark">
-                                                Portrait / Lifestyle
-                                                <span>Wednesday, June 20, 2018</span>
+                                                Beauty / Fashion
+                                                <span>Mardi, 20 Juin 2023</span>
                                             </div>
                                             <div class="news-text-txt">
                                                 <p>
-                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vestibulum libero
-                                                    nec erat pulvinar, sed sollicitudin ex consectetur.
+                                                    Les portraits intemporels sont bien plus que de simples images figées dans le temps. Ils sont des témoignages vivants d'émotions capturées avec sensibilité. En plongeant dans l'univers de ces personnes, nous sommes invités à ressentir leur essence profonde. Chaque cliché est une fenêtre ouverte sur des moments uniques, où les sourires, les regards et les gestes révèlent des histoires silencieuses. Ces portraits nous rappellent que derrière chaque visage se cache une multitude de vécus, de rêves et de peines. Ils nous touchent au plus profond de notre être, nous rappelant notre humanité commune et la beauté de la diversité.
                                                 </p>
                                             </div>
                                             <div class="text-spacer">
