--- a/index.html
+++ b/index.html
@@ -1136,13 +1136,13 @@
                                         <div class="height-correction">
                                             <div class="text-title text-title-dark">
                                                 <h4>
-                                                    Design<br>
-                                                    is a process
+                                                    Voyages en images<br>
+                                            et souvenirs éternels
                                                 </h4>
                                             </div>
                                             <div class="news-page-img-carousel-heading news-page-img-carousel-heading-dark">
-                                                People / Life
-                                                <span>Thursday, June 21, 2018</span>
+                                                Mariage / Event
+                                                <span>Mercredi, 31 Mai 2023</span>
                                             </div>
                                             <div class="news-text-txt">
                                                 <p>
