--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@
                                                 </h4>
                                             </div>
                                             <div class="news-page-img-carousel-heading news-page-img-carousel-heading-dark">
-                                                Beauty / Fashion
+                                                portrait / Lifestyle
                                                 <span>Mardi, 20 Juin 2023</span>
                                             </div>
                                             <div class="news-text-txt">
@@ -1146,8 +1146,7 @@
                                             </div>
                                             <div class="news-text-txt">
                                                 <p>
-                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vestibulum libero
-                                                    nec erat pulvinar, sed sollicitudin ex consectetur.
+                                                    Laissez-vous emporter dans un voyage extraordinaire à travers des images captivantes qui vous transporteront vers des horizons lointains. Chaque cliché est une fenêtre ouverte sur des destinations exotiques, des paysages à couper le souffle et des cultures fascinantes. Ces photographies uniques vous invitent à explorer le monde et à créer des souvenirs éternels. Laissez-vous émerveiller par la beauté des plages de sable blanc, des montagnes majestueuses et des villes animées. Imprégnez-vous de l'atmosphère envoûtante des marchés colorés, des temples anciens et des ruelles pittoresques. Ces images vous promettent un voyage inoubliable, où chaque instant est une invitation à l'émerveillement.
                                                 </p>
                                             </div>
                                             <div class="text-spacer">
